[tool.poetry]
name = "ci-exporter"
version = "0.1.0"
description = ""
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
packages = [
    { include = "ci_exporter", from = "src"  },
]

[tool.poetry.dependencies]
python = "^3.8"
python-gitlab = "^3.14.0"
PyYAML = "^6.0"
pydantic = "^1.10.7"
prometheus-client = "^0.16.0"
typer = "^0.9.0"
APScheduler = "^3.10.1"
peewee = "^3.16.2"
gidgethub = "^5.3.0"
aiohttp = "^3.8.4"
gidgetlab = "^1.0.0"
cachetools = "^5.3.1"
asyncstdlib = "^3.10.8"
more-itertools = "^9.1.0"

[tool.poetry.scripts]
ci-exporter = 'ci_exporter.cli:cli'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
