[project]
name = "ci-exporter"
version = "0.1.0"
description = ""
authors = [{name="Paul Gessinger", email="hello@paulgessinger.com"}]

requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.10",
    "apscheduler>=3.10.4",
    "asyncstdlib>=3.12.5",
    "cachetools>=5.5.0",
    "gidgethub>=5.3.0",
    "gidgetlab>=2.0.1",
    "more-itertools>=10.5.0",
    "peewee>=3.17.6",
    "prometheus-client>=0.21.0",
    "pydantic>=2.9.2",
    "python-gitlab>=4.13.0",
    "pyyaml>=6.0.2",
    "typer>=0.12.5",
]

# [tool.poetry.dependencies]
# python = "^3.10"
# python-gitlab = "^3.14.0"
# PyYAML = "^6.0"
# pydantic = "^1.10.7"
# prometheus-client = "^0.16.0"
# typer = "^0.9.0"
# APScheduler = "^3.10.1"
# peewee = "^3.16.2"
# gidgethub = "^5.3.0"
# aiohttp = "^3.8.4"
# gidgetlab = "^1.0.0"
# cachetools = "^5.3.1"
# asyncstdlib = "^3.10.8"
# more-itertools = "^9.1.0"

[project.scripts]
ci-exporter = 'ci_exporter.cli:cli'

# [tool.poetry.dev-dependencies]
#
# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"
[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
